big change to tiep

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -12,6 +12,7 @@ priority: 0.9
     "name": "Matt Grey",
     "url": "http://www.himatt.com",
     "sameAs": [
+      "https://facebook.com/{{ site.social-username.facebook }}",
       "https://twitter.com/{{ site.social-username.twitter }}",
       "https://instagram.com/{{ site.social-username.instagram }}",
       "https://linkedin.com/in/{{ site.social-username.linkedin }}",
