--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title_override: Matt Grey - Multi-disciplined Digital Product Designer
+title_override: Tiếp - Mua bán và cho thuê căn hộ Bình Dương
 redirect_from: /portfolio
 permalink: /
 priority: 1.0
 ---
 
 <div class="projects-intro-wrapper">
-  <p class="projects-intro type-level-1">Matt&nbsp;Grey is a Product Designer living in London,&nbsp;UK.</p>
+  <p class="projects-intro type-level-1">Tiếp&nbsp;là nền tảng lưu trữ các căn hộ cho thuê tại,&nbsp;Bình Dương.</p>
 </div>
 
 <div class="projects">
