--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -7,7 +7,7 @@ priority: 1.0
 ---
 
 <div class="projects-intro-wrapper">
-  <p class="projects-intro type-level-1">Tiếp&nbsp;là nền tảng lưu trữ các căn hộ cho thuê tại,&nbsp;Bình Dương.</p>
+  <p class="projects-intro type-level-1">Tiếp&nbsp;bán và cho thuê căn hộ tại,&nbsp;Bình Dương.</p>
 </div>
 
 <div class="projects">
