--- a/_pages/about.html
+++ b/_pages/about.html
@@ -36,7 +36,7 @@ intro: |
   In 2010 I founded a [font foundry](https://www.myfonts.com/foundry/Matt_Grey/),
   which has released a number of free and commercial [fonts](/fonts).
 
-profile_picture: /images/profile-pictures/profile.jpg
+profile_picture: /images/profile-pictures/avatar.png
 
 experience:
   - company: Paymentsense
