--- a/_pages/about.html
+++ b/_pages/about.html
@@ -34,7 +34,7 @@ intro: |
   and [OpenJaw Technologies](//www.openjawtech.com).
 
   In 2010 I founded a [font foundry](https://www.myfonts.com/foundry/Matt_Grey/),
-  which has released a number of free and commercial [fonts](/fonts).
+  which has released a number of free and commercial [fonts](/adsense).
 
 profile_picture: /images/profile-pictures/avatar.png
 
@@ -129,8 +129,8 @@ about_site: |
   [Jekyll](https://jekyllrb.com/).
 
   - The typefaces used are
-  [DM Sans](https://fonts.google.com/specimen/DM+Sans) and
-  [DM Serif Display](https://fonts.google.com/specimen/DM+Serif+Display),
+  [DM Sans](https://adsense.google.com/specimen/DM+Sans) and
+  [DM Serif Display](https://adsense.google.com/specimen/DM+Serif+Display),
   designed by [Colophon Foundry](https://www.colophon-foundry.org/).
 
   - Other tools and libraries used include, [SASS](http://sass-lang.com/),
