--- a/_pages/fonts.html
+++ b/_pages/fonts.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Fonts"
+title: "Sell Fresh and PIN Verified Adsense"
 permalink: /adsense/
 redirect_from: /projects/typefaces
 priority: 0.9
